# pwsafe

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.LINUX.md  vcpkg.json
.github/workflows/: cmake-build.yml  codeql-analysis.yml  msvc-analysis.yml
CMakeModules/: FindMagic.cmake  pws-version.cmake  set-options-macos.cmake  set-options-msvc.cmake
CMakeModules/harden/: harden-msvc.cmake
Misc/: CMakeLists.gtest.txt.in  check_po.py  maemo2pwsafe.pl  make-latest-xml.pl  rc2cpp.pl
Misc/vcpkg-triplets/: arm64-windows-ltcg-static-md.cmake  x64-windows-ltcg-static-md.cmake
docs/: config.txt  nojs.html  pad_file.xml
help/: CMakeLists.txt  Makefile.windows
help/default/: pwsafe.hhc  pwsafe.hhk
help/default/html/: Shortcut_Keys.html  Welcome.html  about_combinations.html  about_pws.html  about_pws_yubi.html  advanced.html  aliases.html  autotype.html  backup_and_restore.html  backups_tab.html  change_combo.html  cli.html  compare_results.html  create_new_db.html  credits.html  display_tab.html  edit_menu.html  entering_pwd.html  entering_pwd_add.html  entering_pwd_date.html  entering_pwd_pp.html  export.html  failsafebackups.html  file_menu.html  filters.html  help_menu.html  images.html  imp_exp_text_details.html  import.html  manage_menu.html  menu_toolbar.html  misc_tab.html  named_password_policies.html  password_history.html  password_history_tab.html  password_policies.html  preferences.html  retrieve_pwd.html  run_command.html  searching.html  (+8 more)
help/pwsafeDE/: pwsafe.hhp  pwsafeDE.hhc
help/pwsafeDE/html/: Welcome.html  about_combinations.html  about_pws.html  about_pws_yubi.html  advanced.html  aliases.html  autotype.html  backup_and_restore.html  backups_tab.html  change_combo.html  cli.html  compare_results.html  create_new_db.html  credits.html  display_tab.html  edit_menu.html  entering_pwd.html  entering_pwd_add.html  entering_pwd_date.html  entering_pwd_pp.html  export.html  failsafebackups.html  file_menu.html  filters.html  help_menu.html  images.html  imp_exp_text_details.html  import.html  manage_menu.html  menu_toolbar.html  misc_tab.html  named_password_policies.html  password_history.html  password_history_tab.html  password_policies.html  preferences.html  retrieve_pwd.html  run_command.html  searching.html  security_tab.html  (+8 more)
help/pwsafeES/: pwsafe.hhc  pwsafe.hhk  pwsafe.hhp
help/pwsafeES/html/: Shortcut_Keys.html  Welcome.html  about_combinations.html  about_pws.html  aliases.html  autotype.html  backup_and_restore.html  backups_tab.html  change_combo.html  cli.html  create_new_db.html  credits.html  display_tab.html  edit_menu.html  entering_pwd.html  entering_pwd_add.html  entering_pwd_date.html  entering_pwd_pp.html  export.html  failsafebackups.html  file_menu.html  filters.html  help_menu.html  imp_exp_text_details.html  import.html  manage_menu.html  menu_toolbar.html  misc_tab.html  password_history.html  password_history_tab.html  password_policies.html  popups.js  preferences.html  retrieve_pwd.html  run_command.html  searching.html  security_tab.html  shortcuts_tab.html  system_tab.html  upgrade_from_v1x.html  (+1 more)
help/pwsafeFR/: pwsafe.hhp  pwsafefr.hhc
help/pwsafeFR/html/: pws_about_cpane.htm  pws_add_data.htm  pws_add_uname.htm  pws_combo_chg.htm  pws_combo_entry.htm  pws_combo_err.htm  pws_confirm_del.htm  pws_copy_to_clip.htm  pws_edit.htm  pws_intro.htm  pws_main.htm  pws_opts.htm  pws_set_dflt_uname.htm  pws_uname_entry.htm
help/pwsafePL/: pwsafe.hhp  pwsafePL.hhc
help/pwsafeRU/: pwsafe.hhp  pwsafeRU.hhc  pwsafeRU.hhk
help/pwsafeRU/html/: Shortcut_Keys.html  Welcome.html  about_combinations.html  about_pws.html  about_pws_yubi.html  advanced.html  aliases.html  autotype.html  backup_and_restore.html  backups_tab.html  change_combo.html  cli.html  compare_results.html  create_new_db.html  credits.html  display_tab.html  edit_menu.html  entering_pwd.html  entering_pwd_add.html  entering_pwd_date.html  entering_pwd_pp.html  export.html  failsafebackups.html  file_menu.html  filters.html  help_menu.html  images.html  imp_exp_text_details.html  import.html  manage_menu.html  menu_toolbar.html  misc_tab.html  named_password_policies.html  password_history.html  password_history_tab.html  password_policies.html  popups.js  preferences.html  retrieve_pwd.html  run_command.html  (+9 more)
help/pwsafeZH/: pwsafe.hhc  pwsafe.hhk  pwsafe.hhp
help/pwsafeZH/html/: Shortcut_Keys.html  Welcome.html  about_combinations.html  about_pws.html  aliases.html  autotype.html  backup_and_restore.html  backups_tab.html  change_combo.html  cli.html  create_new_db.html  credits.html  display_tab.html  edit_menu.html  entering_pwd.html  entering_pwd_add.html  entering_pwd_date.html  entering_pwd_pp.html  export.html  failsafebackups.html  file_menu.html  filters.html  help_menu.html  imp_exp_text_details.html  import.html  manage_menu.html  menu_toolbar.html  misc_tab.html  password_history.html  password_history_tab.html  password_policies.html  popups.js  preferences.html  retrieve_pwd.html  run_command.html  searching.html  security_tab.html  shortcuts_tab.html  style.css  system_tab.html  (+2 more)
install/windows/: .gitignore  BuildNSISInstall.bat  BuildWixInstall.bat  pwsafe.iss  pwsafe.wxs
install/windows/I18N/: pwsafe_dk.lng  pwsafe_es.lng  pwsafe_it.lng  pwsafe_kr.lng  pwsafe_nl.lng  (+2 more)
src/Tools/Windows/I18N/ResPWSL/: CMakeLists.txt
src/core/: CMakeLists.txt  CoreImpExp.cpp  PwsPlatform.h  StringX.h  Util.cpp  core.rc2  core_pch.h
src/core/XML/Xerces/: XMLChConverter.h
src/os/: CMakeLists.txt  lib.h  os_pch.h
src/os/mac/: utf8conv.cpp
src/os/unix/: PWYubi.cpp  PWYubi.h
src/os/windows/: KeySend.cpp  UUID.cpp  debug.cpp  dir.cpp  env.cpp  file.cpp  lib.cpp  media.cpp  registry.cpp
src/os/windows/pws_autotype/: CMakeLists.txt
src/os/windows/pws_osk/: CMakeLists.txt
src/os/windows/yubi/: CMakeLists.txt
src/test/: CMakeLists.txt  coretest.cpp  coretest_pch.h
src/ui/cli/: CMakeLists.txt  main.cpp  stdafx.h
xml/: KPV1_to_PWS.xslt  KPV2_to_PWS.xslt  pwsafe.xsd  pwsafe.xsl  pwsafe_filter.xsd
(+122 files in other folders)
